[gd_scene load_steps=7 format=3 uid="uid://compfmpg1pm68"]

[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="1_0v4ed"]
[ext_resource type="Script" path="res://Scenes/TornadoDaMemoria/Instructions.gd" id="2_yvca5"]
[ext_resource type="Texture2D" uid="uid://c3jilcdrom06" path="res://Assets/Background_Menus2.png" id="3_ewnph"]
[ext_resource type="LabelSettings" uid="uid://cu58gbxvkh0uq" path="res://ThemeEditor/label_settings.tres" id="4_d6idv"]
[ext_resource type="Texture2D" uid="uid://cnn3xdr0ywhc8" path="res://Assets/back_icon.png" id="4_jgn27"]
[ext_resource type="Texture2D" uid="uid://db1ee5ts48vp4" path="res://Assets/check.png" id="5_m34cj"]

[node name="Instructions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0v4ed")
script = ExtResource("2_yvca5")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -486.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.72948, 1.3717)
texture = ExtResource("3_ewnph")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -266.0
offset_right = 500.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
text = "Este jogo é para dois jogadores. Os jogadores terão alguns segundos para memorizar as posições dos objetos na cena, antes do tornado trocar tudo de sítio. Depois, os jogadores devem organizar a cena a vez sendo o jogador 1 o primeiro. Em todas as cenas poderão observar um espaço a esquerda e outro a direita. O jogador 1 deve organizar os objetos que estavam localizados inicialmente a esquerda, e o jogador 2, os objetos da direita.
Estão prontos para o desafio?"
label_settings = ExtResource("4_d6idv")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Não"
icon = ExtResource("4_jgn27")

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sim"
icon = ExtResource("5_m34cj")

[node name="VoltarButton" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 164.0
theme = ExtResource("1_0v4ed")
text = " Voltar"
icon = ExtResource("4_jgn27")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="VoltarButton" to="." method="_on_voltar_button_pressed"]
